# realworld-rust

./: '  .gitignore  Cargo.toml  README.md  docker-compose.yml  init-kafka.sh
conf/: default.toml
migrations/: 1_bootstrap.sql
src/: config.rs  event.rs  lib.rs  main.rs
src/db/: article.rs  mod.rs  outbox.rs  tag.rs  user.rs
src/event/: consume.rs  mod.rs  produce.rs
src/http/: article.rs  auth.rs  health.rs  mod.rs  profile.rs  tag.rs  user.rs
