[package]
name = "realworld"
description = "Implementation of the RealWorld API specification in the Rust programming language"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
repository = "https://github.com/dustin10/realworld-rust"
readme = "./README.md"

[dependencies]
anyhow = "1.0.80"
argon2 = "0.5.3"
async-trait = "0.1.77"
axum = { version = "0.7.4" }
chrono = { version = "0.4.34", features = ["serde"] }
config = "0.14.0"
dotenvy = "0.15.7"
futures = "0.3.30"
hmac = "0.12.1"
http = "1.0.0"
jwt = "0.16.0"
rayon = "1.8.1"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
slug = "0.1.5"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono", "json"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
mockall = "0.12.1"
